# project-m1

./: .gitignore
dental-scheduler/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
dental-scheduler/app/: __init__.py  config.py  main.py
dental-scheduler/app/api/: __init__.py  dependencies.py  health.py  router.py  twilio.py
dental-scheduler/app/core/: __init__.py  intent_handler.py  orchestrator.py  scheduler.py
dental-scheduler/app/models/: __init__.py  appointment.py  message.py  patient.py
dental-scheduler/app/services/: __init__.py  calendar_service.py  llm_service.py  redis_service.py  twilio_service.py
dental-scheduler/app/templates/: __init__.py
dental-scheduler/app/utils/: __init__.py  date_utils.py  twilio_validator.py
dental-scheduler/scripts/: edge_case_test.py  real_world_test.py
dental-scheduler/tests/: __init__.py
dental-scheduler/tests/test_api/: __init__.py
dental-scheduler/tests/test_core/: __init__.py  test_intent_handler.py  test_orchestrator.py
dental-scheduler/tests/test_services/: __init__.py  test_calendar.py  test_llm.py  test_twilio.py
